# ble-cpp-module

./: CMakeLists.txt
include/: Adapter.h  BleClient.h  Errors.h  Events.h  Futures.h  Types.h
macos/: BleAdapter.mm  Info.plist  TestBle.mm
src/: main.cpp
src/core/: BleClient.cpp  Errors.cpp  EventBus.cpp
